--- a/ArpSpoofing/View/SettingPage.xaml
+++ b/ArpSpoofing/View/SettingPage.xaml
@@ -6,44 +6,48 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:labs="using:CommunityToolkit.Labs.WinUI"
-    xmlns:viewmodels="using:ArpSpoofing.ViewModels" 
+    xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.Resources>
         <x:Double x:Key="SettingsCardSpacing">3</x:Double>
-        
     </Page.Resources>
 
-    <ScrollViewer>
-        <StackPanel Spacing="{StaticResource SettingsCardSpacing}">
-            <labs:SettingsExpander Header="网卡选择">
-                <labs:SettingsExpander.HeaderIcon>
-                    <FontIcon Glyph="&#xF211;" />
-                </labs:SettingsExpander.HeaderIcon>
-                <ComboBox ItemsSource="{x:Bind viewmodels:SettingViewModel.GetLibPcapLiveDevices()}"
+    <Interactivity:Interaction.Behaviors>
+        <Core:EventTriggerBehavior EventName="Loaded">
+            <Core:InvokeCommandAction Command="{x:Bind ViewModel.LoadCommand}"/>
+        </Core:EventTriggerBehavior>
+    </Interactivity:Interaction.Behaviors>
+
+    <StackPanel Spacing="{StaticResource SettingsCardSpacing}">
+        <labs:SettingsExpander Header="网卡选择">
+            <labs:SettingsExpander.HeaderIcon>
+                <FontIcon Glyph="&#xF211;" />
+            </labs:SettingsExpander.HeaderIcon>
+            <ComboBox ItemsSource="{x:Bind ViewModel.GetLibPcapLiveDevices()}"
                           SelectedItem="{x:Bind ViewModel.SelectNetStr,Mode=TwoWay}"/>
-                <labs:SettingsExpander.Items>
-                    <labs:SettingsCard ContentAlignment="Left">
-                        <StackPanel Orientation="Horizontal" Spacing="30">
-                            <StackPanel Spacing="2">
-                                <TextBlock Text="本机IP" Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorPrimaryBrush}"/>
-                                <TextBlock Text="本机MAC" Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorPrimaryBrush}"/>
-                                <TextBlock Text="网关IP" Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorPrimaryBrush}"/>
-                                <TextBlock Text="网关MAC" Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorPrimaryBrush}"/>
-                            </StackPanel>
-                            <StackPanel Spacing="2">
-                                <TextBlock Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorSecondaryBrush}" IsTextSelectionEnabled="True" Text="{x:Bind ViewModel.LocalIP.ToString(),Mode=OneWay}" />
-                                <TextBlock Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorSecondaryBrush}" IsTextSelectionEnabled="True" Text="{x:Bind ViewModel.LocalMac.ToString(),Mode=OneWay}" />
-                                <TextBlock Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorSecondaryBrush}" IsTextSelectionEnabled="True" Text="{x:Bind ViewModel.GatewayIp.ToString(),Mode=OneWay}" />
-                                <TextBlock Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorSecondaryBrush}" IsTextSelectionEnabled="True" Text="{x:Bind ViewModel.GatewayMac.ToString(),Mode=OneWay}" />
-                            </StackPanel>
+            <labs:SettingsExpander.Items>
+                <labs:SettingsCard ContentAlignment="Left">
+                    <StackPanel Orientation="Horizontal" Spacing="30">
+                        <StackPanel Spacing="2">
+                            <TextBlock Text="本机IP" Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorPrimaryBrush}"/>
+                            <TextBlock Text="本机MAC" Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorPrimaryBrush}"/>
+                            <TextBlock Text="网关IP" Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorPrimaryBrush}"/>
+                            <TextBlock Text="网关MAC" Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorPrimaryBrush}"/>
                         </StackPanel>
+                        <StackPanel Spacing="2">
+                            <TextBlock Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorSecondaryBrush}" IsTextSelectionEnabled="True" Text="{x:Bind ViewModel.LocalIP.ToString(),Mode=OneWay}" />
+                            <TextBlock Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorSecondaryBrush}" IsTextSelectionEnabled="True" Text="{x:Bind ViewModel.PhysicalToString(ViewModel.GatewayMac),Mode=OneWay}" />
+                            <TextBlock Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorSecondaryBrush}" IsTextSelectionEnabled="True" Text="{x:Bind ViewModel.GatewayIp.ToString(),Mode=OneWay}"/>
+                            <TextBlock Style="{StaticResource BodyTextBlockStyle}" Foreground="{StaticResource TextFillColorSecondaryBrush}" IsTextSelectionEnabled="True" Text="{x:Bind ViewModel.PhysicalToString(ViewModel.GatewayMac),Mode=OneWay}" />
+                        </StackPanel>
+                    </StackPanel>
 
-                    </labs:SettingsCard>
+                </labs:SettingsCard>
 
-                </labs:SettingsExpander.Items>
-            </labs:SettingsExpander>
-        </StackPanel>
-    </ScrollViewer>
+            </labs:SettingsExpander.Items>
+        </labs:SettingsExpander>
+    </StackPanel>
 </Page>
