--- a/ArpSpoofing/View/ArpPage.xaml
+++ b/ArpSpoofing/View/ArpPage.xaml
@@ -6,8 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:entity="using:ArpSpoofing.Entity" 
-    xmlns:viewmodels="using:ArpSpoofing.ViewModels" 
-    d:DataContext="{d:DesignInstance Type=viewmodels:ArpViewModel}"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" 
+    xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -37,17 +37,14 @@
             <ListView x:Name="IPList" Header="IP列表" Grid.Row="3" 
                       ItemsSource="{x:Bind ViewModel.Computers,Mode=OneWay}"
                       Margin="12,0"
-                      SelectionMode="Single"
-                      IsItemClickEnabled="False"
-                      >
+                      SelectionMode="None"
+                      IsItemClickEnabled="False">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="entity:Computer">
                         <StackPanel Orientation="Horizontal" Spacing="3" Margin="0,0,0,0">
+                            <CheckBox IsChecked="{x:Bind IsSelect,Mode=TwoWay}"/>
                             <TextBlock VerticalAlignment="Center" Text="{x:Bind IPAddress}"/>
                             <TextBlock VerticalAlignment="Center" Text="{x:Bind MacAddress}"/>
-                            <Button>
-                                <FontIcon Glyph="&#xE724;" />
-                            </Button>
                         </StackPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
